Tooltips from the search terms are no longer hidden if they overflow outside the dimensions of the viewer.

--- a/css/islandora_internet_archive_bookreader.css
+++ b/css/islandora_internet_archive_bookreader.css
@@ -1,6 +1,6 @@
 div#BookReader {
   position: static;
-  overflow-y: hidden;
+  overflow: visible;
 }
 div#BRtoolbar {
   position: relative;
